--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Velarix - Creative Continuity | Digital Studio for Small Businesses</title>
+    <title>Velarix - Creative Continuity | Marketing | WebDev | Automation</title>
     <meta name="description" content="Velarix is a boutique digital studio crafting refined web experiences, eCommerce solutions, branding, and technical automation for small businesses and creators across the Netherlands, Europe and United States." />
     <meta name="author" content="Velarix Digital Studio" />
     
