--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" class="dark">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Velarix - Creative Continuity | Marketing | WebDev | Automation</title>
@@ -19,7 +20,7 @@
     
     <!-- Open Graph Enhanced -->
     <meta property="og:title" content="Velarix - Creative Continuity | Digital Studio" />
-    <meta property="og:description" content="Boutique digital studio crafting refined web experiences, eCommerce solutions, and branding for small businesses across Netherlands and United States." />
+    <meta property="og:description" content="Crafting refined web experiences, eCommerce solutions, and branding for businesses across the world." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://velarix.digital/" />
     <meta property="og:image" content="https://velarix.digital/og-image.svg" />
